# pyldraw3-tui

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: lint-test.yml  publish.yml
scripts/: make_screenshots.py
src/: main.py
src/pyldraw3_tui/: __init__.py  __main__.py  app.py  clipboard.py  commands.py  errors.py  main.py  messages.py  theme.py
src/pyldraw3_tui/data/: __init__.py  search.py  snippets.py  source.py  web.py
src/pyldraw3_tui/screens/: __init__.py  catalog.py  chooser.py  help.py  model.py  open_model.py  setup.py
src/pyldraw3_tui/widgets/: __init__.py  bom_table.py  category_tree.py  colour_swatches.py  filter_box.py  issues_table.py  part_detail.py  parts_list.py  piece_table.py  stats_panel.py  subpart_tree.py
tests/: conftest.py  helpers.py  test_main.py  test_pilot_catalog.py  test_pilot_model.py  test_search.py  test_snapshots.py  test_snippets.py  test_source.py  test_stats_panel.py  test_web.py
tests/fixtures/models/: broken.ldr  car.ldr  spaceship.mpd  warnings.ldr
